--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <p><%= link_to 'Sign up', new_user_registration_path %>
+    <p><%= link_to 'Sign in', new_user_session_path %>
+    <p><%= link_to 'Logout', destroy_user_session_path, method: :delete %>
     <%= yield %>
   </body>
 </html>
