--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -13,5 +13,10 @@
   <br>
   <%= f.text_area :text %>
   <br><br>
+  <%= f.label :category %>
+  <%= f.collection_select(:category_ids, Category.all, :id, :name,
+    { prompt: 'Select at least one article category' },
+    {required: true})%>
+  <br><br>
   <%= f.submit %>
 <% end %>
