--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -13,10 +13,13 @@
   <br>
   <%= f.text_area :text %>
   <br><br>
-  <%= f.label :category %>
+  <%= f.label :category %><br>
   <%= f.collection_select(:category_ids, Category.all, :id, :name,
     { prompt: 'Select at least one article category' },
-    {required: true})%>
+    { multiple: true, size: 3, required: true})%>
+  <br><br>
+  <%= f.label :image %><br>
+  <%= f.file_field :image, required: true %>
   <br><br>
   <%= f.submit %>
 <% end %>
