Capitalize vote button text

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,6 +8,6 @@
 <% end %>
 <br><br>
 <%= form_with url: article_votes_path(@article), method: :post do |f| %>
-  <%= f.submit 'Vote'%>
+  <%= f.submit 'VOTE'%>
 <% end %>
 <%= @article.votes.count %>
