--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,3 +3,11 @@
 <% if user_signed_in? %>
   <h4><%= current_user.username %></h4>
 <% end %>
+
+<% top_vote_article = Article.find(Vote.group(:article_id).count.max[0]) %>
+
+<div>
+  <div `style="background-image: url(<%= url_for(top_vote_article.image) %>)"`>
+    <p style="color: white"><%= top_vote_article.title %></p>
+  </div>
+</div>
