--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
-<!-- <% if @article.image.attached? %>
+<% if @article.image.attached? %>
   <image width="90%" height="60%" src="<%=(url_for(@article.image))%>">
-<% end %> -->
+<% end %>
 <h3><%= @article.title %></h3>
 <p><%= @article.text %></p>
 <% @article.categories.each do |category| %>
