--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,27 +1,30 @@
-<h1>Haha Index Page</h1>
-
 <% if user_signed_in? %>
   <h4><%= current_user.username %></h4>
 <% end %>
 
-<% top_vote_article = Article.find(Vote.group(:article_id).count.max[0]) %>
+<% top_vote_article = Article.find(Vote.group(:article_id).count.max_by{|k, v| v}[0]) %>
 <!-- <image src="<%=(url_for(top_vote_article.image))%>"> -->
 
 
-<div>
+<div class="top-image-container">
   <div class="top-image" style="background-image: url(<%=(url_for(top_vote_article.image)) %>); height: 500px">
     <p><%= top_vote_article.title %></p>
   </div>
 </div>
 <br>
+
 <div class="container-box">
   <% Category.all.each do |pr| %>
-    <a href="<%= category_path(pr) %>">
-      <div class="category-title"><%= pr.name %>
-        <% if !pr.articles.order(created_at: :desc).first.nil? %>
-          <p id="tor"><%= pr.articles.order(created_at: :desc).first.title %></p>
+    <% latest_article = pr.articles.order(created_at: :desc).first %>
+    <a class="category-article-link" href="<%= category_path(pr) %>">
+    <image class="category-article-image" src="<%= url_for(top_vote_article.image) %>">
+    <!-- <%= image_tag 'messi_back.jpg', class: "category-article-image" %> -->
+      <div class="category-title">
+        <p><%= pr.name %></p>
+        <% if !latest_article.nil? %>
+          <p><%= latest_article.title %></p>
         <% end %>
       </div>
-    </a>
+   </a>
   <% end %>
 </div>
