--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,22 @@
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <% end %>
-    <p><%= link_to 'Sign up', new_user_registration_path %></p>
-    <p><%= link_to 'Sign in', new_user_session_path %></p>
-    <p><%= link_to 'Logout', destroy_user_session_path, method: :delete %></p>
+    <nav class="nav-bar navbar">
+      <span class="logo">
+        <%= link_to 'Home', root_path, class: "navbar-brand" %>
+      </span>
+
+      <span class="mid-nav">
+        <%= link_to 'Home', root_path %>
+        <%= link_to 'Write an article', new_article_path %>
+      </span>
+
+      <span class="right-nav">
+        <%= link_to 'Login', new_user_session_path %>
+        <%= link_to 'Register', new_user_registration_path %>
+        <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+      </span>
+    </nav>
     <%= yield %>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
   </body>
