--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,10 @@
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <% end %>
+
     <nav class="nav-bar navbar">
       <span class="logo">
-        <%= link_to 'Home', root_path, class: "navbar-brand" %>
+        <%= link_to 'HOME', root_path, class: "navbar-brand" %>
       </span>
 
       <span class="mid-nav">
