--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,11 +2,16 @@
   <div class="cat-container">
     <% @category.articles.order(created_at: :desc).each do |article| %>
       <div class="cat-article-container">
-        <div>
+        <div class="text-center">
           <h3><span class="border-bottom pb-2"><%= @category.name %></span></h3>
-          <p><%= article.title %><p>
+          <p class="mb-5 mt-4"><%= article.title %><p>
           <p><%= truncate(article.text, length: 30) %></p>
-          <p><%= article.author.username %></p>
+          <p class="mt-3"><%= article.author.username %></p>
+
+          <%= form_with url: article_votes_path(article), method: :post do |f| %>
+            <%= f.submit 'VOTE'%>
+          <% end %>
+          <%= article.votes.count %>
         </div>
         <div>
           <% if article.image.attached? %>
