--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,8 @@
       </span>
 
       <span class="mid-nav">
-        <%= link_to 'Home', root_path %>
-        <%= link_to 'Write an article', new_article_path %>
+        <%= link_to 'HOME', root_path, class: "mr-2" %>
+        <%= link_to 'WRITE AN ARTICLE', new_article_path %>
       </span>
 
       <span class="right-nav">
