--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,16 +8,20 @@
 
 <div class="top-image-container">
   <div class="top-image" style="background-image: url(<%=(url_for(top_vote_article.image)) %>); height: 500px">
-    <p><%= top_vote_article.title %></p>
+    <h2><%= top_vote_article.title %></h2>
   </div>
 </div>
 <br>
 
 <div class="container-box">
-  <% Category.all.each do |pr| %>
+  <% Category.order(:priority).each do |pr| %>
     <% latest_article = pr.articles.order(created_at: :desc).first %>
     <a class="category-article-link" href="<%= category_path(pr) %>">
-    <image class="category-article-image" src="<%= url_for(top_vote_article.image) %>">
+    <% if !latest_article.nil? and latest_article.image.attached? %>
+      <image class="category-article-image" src="<%= url_for(latest_article.image) %>">
+    <% else %>
+      <image class="category-article-image" src="<%= url_for(top_vote_article.image) %>">
+    <% end %>
     <!-- <%= image_tag 'messi_back.jpg', class: "category-article-image" %> -->
       <div class="category-title">
         <p><%= pr.name %></p>
