Style full width of featured article

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -88,7 +88,9 @@
 
 .top-image > h2 {
   position: relative;
-  top: 350px;
+  top: 400px;
+  font-weight: bolder;
+  letter-spacing: 2px;
 }
 
 .category-article-link {
