--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 
 <div class="top-image-container">
   <div class="top-image" style="background-image: url(<%=(url_for(top_vote_article.image)) %>); height: 500px">
-    <h2><%= top_vote_article.title %></h2>
+    <h2 id="orange-color" class="ml-4"><%= top_vote_article.title %></h2>
   </div>
 </div>
 <br>
