--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <script src="https://kit.fontawesome.com/1ebe4d9033.js" crossorigin="anonymous"></script>
+
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
@@ -13,7 +15,7 @@
 
   </head>
 
-  <body>
+  <body class="d-flex flex-column">
 
     <% if notice %>
       <div class="alert alert-success alert-dismissible fade show col-md-9" role="alert">
@@ -44,7 +46,25 @@
         <%= link_to 'LOGOUT', destroy_user_session_path, method: :delete %>
       </span>
     </nav>
+    
     <%= yield %>
+
+    <footer class="nav-bar navbar" id="footer-section">
+      <span class="logo">
+        <%= link_to 'OLA BLOG', root_path, class: "navbar-brand" %>
+      </span>
+
+      <span class="mid-nav">
+        <span id="orange-color">Privacy Policy &middot; Terms &amp; Conditions</span> Copyright 2014. All rights reserved.
+      </span>
+
+      <span class="right-nav">
+        Connect with us:
+        <i class="fab fa-twitter fa-sm mr-2" id="orange-color"></i>
+        <i class="fab fa-instagram mr-2" id="orange-color"></i>
+        <i class="fab fa-facebook" id="orange-color"></i>
+      </span>
+    </footer>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
   </body>
 </html>
