Fix footer to bottom of page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -133,11 +133,6 @@
   grid-template-columns: 1fr 1fr;
 }
 
-html,
-body {
-  height: 100%;
-}
-
 main {
   height: 100%;
 }
@@ -149,4 +144,19 @@ main {
 
 #footer-section .logo {
   color: white
+}
+
+/* Sticky Footer Classes */
+
+html,
+body {
+  height: 100%;
+}
+
+#page-content {
+  flex: 1 0 auto;
+}
+
+#sticky-footer {
+  flex-shrink: none;
 }
