--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 <% if @article.image.attached? %>
-  <image width="90%" height="60%" src="<%=(url_for(@article.image))%>">
+  <image width="200px" height="200px" src="<%=(url_for(@article.image))%>">
 <% end %>
 <h3><%= @article.title %></h3>
 <p><%= @article.text %></p>
