Add delete article button to category articles

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -9,9 +9,11 @@
           <p class="mt-3"><%= article.author.username %></p>
 
           <%= form_with url: article_votes_path(article), method: :post do |f| %>
-            <%= f.submit 'VOTE'%>
+            <%= f.submit 'VOTE', class: "btn btn-success"%>
           <% end %>
-          <%= article.votes.count %>
+          <p class="mb-0 mt-2">Votes: <%= article.votes.count %></p>
+          <br>
+          <%= link_to 'Delete Article', article, class: "btn btn-danger", method: :delete %>
         </div>
         <div>
           <% if article.image.attached? %>
