--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -34,7 +34,7 @@
         <%= f.file_field :image, required: true, class: "form-control-file" %>
       </div>
 
-      <%= f.submit class: "btn btn-primary" %>
+      <%= f.submit class: "btn new-btn" %>
 
     <% end %>
 
