--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,12 @@
 <main>
   <section>
     <% if user_signed_in? %>
-      <h4><%= current_user.username %></h4>
+      <h5><%= current_user.username %> is signed in</h5>
     <% end %>
   </section>
 
   <% top_vote_article = Article.find(Vote.group(:article_id).count.max_by{|k, v| v}[0]) %>
-  <!-- <image src="<%=(url_for(top_vote_article.image))%>"> -->
-
+  
   <section>
     <div class="top-image-container">
       <div class="top-image" style="background-image: url(<%=(url_for(top_vote_article.image)) %>); height: 500px">
@@ -26,7 +25,6 @@
         <% else %>
           <image class="category-article-image" src="<%= url_for(top_vote_article.image) %>">
         <% end %>
-        <!-- <%= image_tag 'messi_back.jpg', class: "category-article-image" %> -->
           <div class="category-title">
             <p><span class="pb-1 font-weight-bold ml-2 cat-span"><%= category.name %></span></p>
             <% if !latest_article.nil? %>
