--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,25 +1,25 @@
-<% if @article.errors.any? %>
-  <% @article.errors.full_messages.each do |msg| %>
-    <p><%= msg %></p>
-  <% end %>
-<% end %>
-
 <h1 class="mt-4 text-center" id="orange-color">Create a new article</h1>
 
 <div class="row justify-content-center">
 
   <div class="col-6">
 
+    <% if @article.errors.any? %>
+      <% @article.errors.full_messages.each do |msg| %>
+        <p><%= msg %></p>
+      <% end %>
+    <% end %>
+
     <%= form_with model: @article do |f| %>
       
       <div class="form-group">
         <%= f.label :title %>
-        <%= f.text_field :title, class: "form-control" %>
+        <%= f.text_field :title, class: "form-control", required: true %>
       </div>
 
       <div class="form-group">
         <%= f.label :text %>
-        <%= f.text_area :text, class: "form-control", rows: "6" %>
+        <%= f.text_area :text, class: "form-control", rows: "6", required: true %>
       </div>
 
       <div class="form-group">
@@ -30,7 +30,7 @@
       </div>
       
       <div class="form-group">
-        <%= f.label :image %>
+        <%= f.label 'Article Image' %>
         <%= f.file_field :image, required: true, class: "form-control-file" %>
       </div>
 
