--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
 
       <div class="form-group">
         <%= f.label :email %>
-        <%= f.text_field :email, class: "form-control", autocomplete: "email"  %>
+        <%= f.email_field :email, class: "form-control", autocomplete: "email"  %>
       </div>
 
       <div class="form-group">
