Add links to footer icons

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,13 +4,13 @@
   </span>
 
   <span class="mid-nav">
-    <span id="orange-color">Privacy Policy &middot; Terms &amp; Conditions</span> Copyright 2014. All rights reserved.
+    <span id="orange-color">Privacy Policy &middot; Terms &amp; Conditions</span> Copyright 2021. All rights reserved.
   </span>
 
   <span class="right-nav">
     Connect with us:
-    <i class="fab fa-twitter fa-sm mr-2" id="orange-color"></i>
-    <i class="fab fa-instagram mr-2" id="orange-color"></i>
-    <i class="fab fa-facebook" id="orange-color"></i>
+    <a href="https://twitter.com/iamxted"><i class="fab fa-twitter mr-2" id="orange-color"></i></a>
+    <a href="https://linkedin.com/in/tememandu"><i class="fab fa-linkedin mr-2" id="orange-color"></i></a>
+    <a href="https://github.com/TedLivist"><i class="fab fa-github" id="orange-color"></i></a>
   </span>
 </footer>
