--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,16 +4,16 @@
       <h5><%= current_user.username %> is signed in</h5>
     <% end %>
   </section>
-
-  <% top_vote_article = Article.find(Vote.group(:article_id).count.max_by{|k, v| v}[0]) %>
   
-  <section>
-    <div class="top-image-container">
-      <div class="top-image" style="background-image: url(<%=(url_for(top_vote_article.image)) %>); height: 500px">
-        <h2 id="orange-color" class="ml-4"><%= top_vote_article.title %></h2>
+  <%if @top_vote_article %>
+    <section>
+      <div class="top-image-container">
+        <div class="top-image" style="background-image: url(<%=(url_for(@top_vote_article.image)) %>); height: 500px">
+          <h2 id="orange-color" class="ml-4"><%= @top_vote_article.title %></h2>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+  <% end %>
 
   <section>
     <div class="container-box">
