--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,35 @@
   </div>
 
   <div class="row mb-4">
-    <div class="col-sm-3">
+    <% Category.all.limit(4).each do |category| %>
+      <% if !category.articles.empty? %>
+        <div class="col-sm-3">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title"><%= category.name %></h5>
+              <h6 class="card-subtitle mb-2 text-muted"><%= category.articles.last.title %></h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+        </div>
+      <% else %>
+        <div class="col-sm-3">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title"><%= category.name %></h5>
+              <h6 class="card-subtitle mb-2 text-muted"><%= Article.last.title %></h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+
+    <!-- <div class="col-sm-3">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
@@ -78,18 +106,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-3">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
-    </div>
-  </div>
+  </div> -->
 
 </main>
 
